# MediaServerStack

./: README.md  work.md
src/: CMakeLists.txt
src/jrtplib/: CMakeLists.txt
src/libexosip2/: CMakeLists.txt
src/libexosip2/examples/: CMakeLists.txt  example1.cpp
src/libexosip2/src/: CMakeLists.txt
src/rtptransferformat/: mpeg2ps.cpp  mpeg2ps.h  mpeg2ts.cpp  mpeg2ts.h  rtpcomment.h  rtppayloadformataudio.cpp  rtppayloadformataudio.h  rtppayloadformatvideo.cpp  rtppayloadformatvideo.h
src/test/: localplayer.h  test.cpp
